Fix(LevelInfo): Fix not working text overflow issue, Fix class name

--- a/src/stylesheets/global.css
+++ b/src/stylesheets/global.css
@@ -233,6 +233,13 @@ main {
  * .level-item-info-background
  */
 
+.level-item-info {
+  position: relative;
+  width: 1100px;
+  height: 70px;
+  margin-bottom: 8px;
+}
+
 .level-item-info-background-container {
   top: 0;
   left: 0;
@@ -283,15 +290,15 @@ main {
   z-index: 1;
 }
 
-.main-level-info:hover .level-item-info-background {
+.level-item-info:hover .level-item-info-background {
   filter: blur(3px) brightness(0.4);
 }
 
-.main-level-info:hover .level-item-info-container-hover {
+.level-item-info:hover .level-item-info-container-hover {
   opacity: 1;
 }
 
-.main-level-info:hover .level-item-info-container-normal {
+.level-item-info:hover .level-item-info-container-normal {
   opacity: 0;
 }
 
@@ -304,6 +311,10 @@ main {
 
 .level-item-info-section {
   margin-left: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .level-item-info-section-center * {
@@ -320,11 +331,8 @@ main {
 
 .level-item-info-value {
   max-width: 400px;
-  height: 30px;
   font-size: 20px;
   font-weight: 500;
-  display: flex;
-  align-items: flex-end;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
