--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -173,117 +173,6 @@
   margin-right: auto;
 }
 
-.main-level-info {
-  position: relative;
-  width: 1100px;
-  height: 70px;
-  margin-bottom: 8px;
-}
-
-.main-level-info-top {
-  height: 20px;
-  font-size: 15px;
-  color: #b3b3b3;
-  font-weight: 600;
-}
-
-.main-level-info-level {
-  max-width: 400px;
-  height: 30px;
-  text-overflow: ellipsis " [..]";
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-creator {
-  max-width: 200px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-bpm {
-  max-width: 130px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-tiles {
-  max-width: 80px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-likes {
-  max-width: 80px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-comments {
-  max-width: 80px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-song {
-  max-width: 400px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-artist {
-  max-width: 250px;
-  height: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-}
-
-.main-level-info-tags {
-  max-width: 335px;
-  height: 30px;
-  font-size: 20px;
-  color: white;
-  font-weight: 500;
-  display: flex;
-}
-
 .main-tag {
   height: 24px;
   margin-top: 4px;
